# beaglebone-getting-started

./: .gitignore  CMakeLists.txt  README.md  build.sh  main.cpp  scp_beagleplay.sh  toolchain-aarch64.cmake
App/appTypes/: CMakeLists.txt
App/appTypes/include/: message_types.hpp
App/app_types/: CMakeLists.txt
App/app_types/include/: message_types.hpp
App/connection_hub/: CMakeLists.txt
App/connection_hub/include/: connection_hub.hpp
App/connection_hub/include/streams/: latest_ring_buffer.hpp
App/flexibleQueue/: CMakeLists.txt  README.md
App/flexibleQueue/include/: flexible_queue.hpp
App/flow_control/: CMakeLists.txt
App/flow_control/include/: flow_control.hpp
App/proto/: CMakeLists.txt  message.proto
App/runnables/: CMakeLists.txt
App/runnables/include/: runnables.hpp
App/runnables/src/: runnables.cpp  runnables_internal.hpp
App/runnables/src/appRunnables/: runnable_app_four.cpp  runnable_app_one.cpp  runnable_app_three.cpp  runnable_app_two.cpp
build-aarch64/: CMakeCache.txt
build-host/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  project_beagleplay
build-host/App/app_types/: cmake_install.cmake
build-host/App/connection_hub/: cmake_install.cmake
build-host/App/flow_control/: cmake_install.cmake
build-host/App/proto/: cmake_install.cmake
build-host/App/runnables/: cmake_install.cmake
build-host/logger/: cmake_install.cmake
build-host/mutex/: cmake_install.cmake
doxygen/: Doxyfile  README.md
doxygen/diagrams/: Project_connection_diagram.drawio
doxygen/docs/html/: README_8md.html  annotated.html  classLogger-members.html  classLogger.html  classLogger__coll__graph.map  classLogger__coll__graph.md5  classLogger_a52d98131462d3254f76fae8f43b2fa90_cgraph.map  classLogger_a52d98131462d3254f76fae8f43b2fa90_cgraph.md5  classLogger_a6a28c864160aa1d14f49668e591f29b8_icgraph.map  classLogger_a6a28c864160aa1d14f49668e591f29b8_icgraph.md5  classLogger_a7f6586736d3e5fc2915039541a67b6bd_cgraph.map  classLogger_a7f6586736d3e5fc2915039541a67b6bd_cgraph.md5  classLogger_adcbe6e560903cbb4257bccf546789e52_cgraph.map  classLogger_adcbe6e560903cbb4257bccf546789e52_cgraph.md5  classLogger_afaac8d8aba7262900267f1e3779bd657_cgraph.map  classLogger_afaac8d8aba7262900267f1e3779bd657_cgraph.md5  classLogger_afaac8d8aba7262900267f1e3779bd657_icgraph.map  classLogger_afaac8d8aba7262900267f1e3779bd657_icgraph.md5  classconnection__hub_1_1ConnectionHub-members.html  classconnection__hub_1_1ConnectionHub.html  classconnection__hub_1_1ConnectionHub_1_1Publisher-members.html  classconnection__hub_1_1ConnectionHub_1_1Publisher.html  classconnection__hub_1_1ConnectionHub_1_1Publisher__coll__graph.map  classconnection__hub_1_1ConnectionHub_1_1Publisher__coll__graph.md5  classconnection__hub_1_1ConnectionHub_1_1Publisher_ae8d1de4f85bff41ff53393580413d44c_cgraph.map  classconnection__hub_1_1ConnectionHub_1_1Publisher_ae8d1de4f85bff41ff53393580413d44c_cgraph.md5  classconnection__hub_1_1ConnectionHub_1_1Publisher_ae8d1de4f85bff41ff53393580413d44c_icgraph.map  classconnection__hub_1_1ConnectionHub_1_1Publisher_ae8d1de4f85bff41ff53393580413d44c_icgraph.md5  classconnection__hub_1_1ConnectionHub_1_1Receiver-members.html  classconnection__hub_1_1ConnectionHub_1_1Receiver.html  classconnection__hub_1_1ConnectionHub_1_1Receiver__coll__graph.map  classconnection__hub_1_1ConnectionHub_1_1Receiver__coll__graph.md5  classconnection__hub_1_1ConnectionHub_1_1Receiver_a98cfa875329ceb913173ef6eeb709ec7_cgraph.map  classconnection__hub_1_1ConnectionHub_1_1Receiver_a98cfa875329ceb913173ef6eeb709ec7_cgraph.md5  classconnection__hub_1_1ConnectionHub_1_1Receiver_a98cfa875329ceb913173ef6eeb709ec7_icgraph.map  classconnection__hub_1_1ConnectionHub_1_1Receiver_a98cfa875329ceb913173ef6eeb709ec7_icgraph.md5  classconnection__hub_1_1ConnectionHub__coll__graph.map  classconnection__hub_1_1ConnectionHub__coll__graph.md5  classconnection__hub_1_1streams_1_1LatestRingBuffer-members.html  classconnection__hub_1_1streams_1_1LatestRingBuffer.html  (+141 more)
doxygen/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  (+53 more)
logger/: CMakeLists.txt
logger/include/: logger.hpp
logger/src/: logger.cpp
mutex/: CMakeLists.txt
mutex/include/: mutex.hpp
personal/: file.txt  logger.cpp  logger.hpp  main.cpp
src/: hello.cpp
